php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #17287 safe mode is not full safe.
Submitted: 2002-05-17 09:36 UTC Modified: 2002-10-24 20:07 UTC
Votes:2
Avg. Score:5.0 ± 0.0
Reproduced:2 of 2 (100.0%)
Same Version:1 (50.0%)
Same OS:2 (100.0%)
From: raven at cavern dot pl Assigned:
Status: Closed Package: *General Issues
PHP Version: 4.2.0 OS: Linux + apache 1.3
Private report: No CVE-ID: None
 [2002-05-17 09:36 UTC] raven at cavern dot pl
On set_time_limit documentation web page stands:
 set_time_limit() has no effect when PHP is running in safe mode. There is no workaround other than turning off safe mode or changing the time limit in the configuration file. 

which is false, becouse You may do: ini_set("max_execution_time", "any value") and it success even in safe_mode.
I consider it as a bug.
I guess this will work for memory_limit also.

Raven

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2002-10-24 20:07 UTC] iliaa@php.net
This bug has been fixed in CVS.

In case this was a PHP problem, snapshots of the sources are packaged
every three hours; this change will be in the next snapshot. You can
grab the snapshot at http://snaps.php.net/.
 
In case this was a documentation problem, the fix will show up soon at
http://www.php.net/manual/.

In case this was a PHP.net website problem, the change will show
up on the PHP.net site and on the mirror sites in short time.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Thu Aug 20 09:00:01 2026 UTC